[package]
name = "nonogram"
version = "0.1.0"
edition = "2024"
description = "Nonogram solver"
readme = "README.md"
repository = "https://github.com/dacci/nonogram"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["thread-pool"] }
thiserror = "2.0.12"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
